# RyzenTuner

./: .gitmodules  Cargo.toml
core/: Cargo.toml
core/src/: lib.rs  main.rs
ryzen-tuner/: Cargo.toml  build.rs
ryzen-tuner/src/: lib.rs  main.rs
ryzenadj-bind/: Cargo.toml  build.rs
ryzenadj-ffi/: Cargo.toml  build.rs  wrapper.h
ryzenadj-ffi/src/: lib.rs
tuner/: nuxt.config.ts  package.json  pnpm-lock.yaml
tuner/app/: app.vue
tuner/app/assets/: main.css
tuner/app/components/: HeaderBar.vue  NumberInput.vue
tuner/app/pages/: config.vue  settings.vue
tuner/app/plugins/: piniaPersist.client.ts
tuner/app/stores/: profiles.ts  settings.ts
tuner/app/types/: bindings.ts  config.ts
tuner/src-tauri/: Cargo.toml  tauri.conf.json
tuner/src-tauri/src/: cmds.rs  error.rs  lib.rs  main.rs  plugins.rs  types.rs  utils.rs
