[workspace]
resolver = "3"
members = ["core", "ryzenadj-ffi", "tuner/src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
log = "0.4.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.9.1", features = [] }
tauri-plugin-log = "2"
specta = "2.0.0-rc.21"
specta-typescript = "0.0.9"
tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript"] }
libc = "0.2"
cc = "1.2"
bindgen = "0.72"
tauri-build = { version = "2.5.1", features = [] }
ryzen-tuner-core = { path = "./core" }
ryzenadj-ffi = { path = "./ryzenadj-ffi" }
dirs = "6.0.0"
toml = "0.9.8"
