[package]
name = "ryzen-tuner"
version.workspace = true
authors = ["liyang8246"]
edition.workspace = true

[lib]
name = "ryzen_tuner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
log = { workspace = true }
tauri = { workspace = true, features = [] }
tauri-plugin-log = { workspace = true }
ryzen-tuner-core = { workspace = true }
